network-policy/allow_incoming_traffic_from_namespaced_pod.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx # podselector to which traffic will be alllowed
  policyTypes:
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            project: test #namespace label from which traffic allowd
        podSelector:
          matchLabels:
            app: client #pod label from which traffic allowd
    ports:
    - protocol: TCP
      port: 80 #port on which traffic is allowd.
